Fix inline images not showing up

Work around QTBUG 93281

See https://bugreports.qt.io/browse/QTBUG-93281 for details