src/controller.cpp
@@ -684,3 +684,9 @@ bool Controller::encryptionSupported() const
     return false;
 #endif
 }
+
+void Controller::forceRefreshTextDocument(QQuickTextDocument *textDocument, QQuickItem *item)
+{
+    // HACK: Workaround bug QTBUG 93281
+    connect(textDocument->textDocument(), SIGNAL(imagesLoaded()), item, SLOT(updateWholeDocument()));
+}
